Overflow bug fix

--- a/public/css/csquest.css
+++ b/public/css/csquest.css
@@ -32,6 +32,7 @@ body {
   flex-grow: 1;
   /* border: solid 1px black; */
   margin-right: 3%;
+  overflow: hidden;
   /* border-right-style: dotted; */
   /* border-right: thick green; */
 
